--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,13 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <!-- FONT AWESOME SCRIPT -->
+    <script
+      src="https://kit.fontawesome.com/88f7778a6c.js"
+      crossorigin="anonymous"
+    ></script>
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
